tests/fixtures/invalid/chr_list.py
# Cannot call chr() with List[int]
x = chr([1, 2, 3])
